tests/fsharp/typecheck/sigs/neg106.bsl

neg106.fs(22,24,22,25): parse error FS0010: Unexpected quote symbol in binding. Expected incomplete structured construct at or before this point or other token.

neg106.fs(24,1,24,7): parse error FS0010: Incomplete structured construct at or before this point in definition. Expected incomplete structured construct at or before this point or other token.
