tests/fsharp/typecheck/sigs/neg106.vsbsl

neg106.fs(22,24,22,25): parse error FS0010: Unexpected quote symbol in binding. Expected incomplete structured construct at or before this point or other token.

neg106.fs(24,1,24,7): parse error FS0010: Incomplete structured construct at or before this point in definition. Expected incomplete structured construct at or before this point or other token.

neg106.fs(8,14,8,68): typecheck error FS0041: No overloads match for method 'CompareExchange'. The available overloads are shown below.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<int>, value: int, comparand: int) : int'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<int>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<int64>, value: int64, comparand: int64) : int64'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<int64>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<float32>, value: float32, comparand: float32) : float32'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<float32>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<float>, value: float, comparand: float) : float'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<float>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<obj>, value: obj, comparand: obj) : obj'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<obj>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<nativeint>, value: nativeint, comparand: nativeint) : nativeint'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<nativeint>'    
.
neg106.fs(8,14,8,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange<'T when 'T : not struct>(location1: byref<'T>, value: 'T, comparand: 'T) : 'T'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<'a>'    
.

neg106.fs(11,14,11,68): typecheck error FS0041: No overloads match for method 'CompareExchange'. The available overloads are shown below.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<int>, value: int, comparand: int) : int'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<int>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<int64>, value: int64, comparand: int64) : int64'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<int64>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<float32>, value: float32, comparand: float32) : float32'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<float32>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<float>, value: float, comparand: float) : float'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<float>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<obj>, value: obj, comparand: obj) : obj'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<obj>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange(location1: byref<nativeint>, value: nativeint, comparand: nativeint) : nativeint'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<nativeint>'    
.
neg106.fs(11,14,11,68): typecheck error FS0041: Possible overload: 'System.Threading.Interlocked.CompareExchange<'T when 'T : not struct>(location1: byref<'T>, value: 'T, comparand: 'T) : 'T'. Type constraint mismatch. The type 
    'byref<int,ByRefKinds.In>'    
is not compatible with type
    'byref<'a>'    
.

neg106.fs(16,31,16,35): typecheck error FS0001: Type mismatch. Expecting a
    'byref<int,ByRefKinds.Out>'    
but given a
    'inref<int>'    
The type 'ByRefKinds.Out' does not match the type 'ByRefKinds.In'
